packages/dash-components/src/components/dash-button/dash-button.css
@import '../../assets/styles/_app.css';
@import '../../assets/styles/_focus-outline.css';

:host {
  display: inline-block;
  --dash-button-text-color: var(--dash-text-color-1);
  --dash-button-text-color-disabled: var(--dash-text-color-3);
  --dash-button-background-color: unset;
  --dash-button-background-color-hover: var(--dash-bg-darken-1);
  --dash-button-background-color-active: var(--dash-bg-darken-2);
  --dash-button-padding: var(--dash-spacing-1) var(--dash-spacing-2);
}

:host([status='success']) {
  --dash-button-background-color: var(--dash-success);
  --dash-button-background-color-hover: var(--dash-success-hover);
  --dash-button-background-color-active: var(--dash-success-active);
}

:host([status='error']) {
  --dash-button-background-color: var(--dash-danger);
  --dash-button-background-color-hover: var(--dash-danger-hover);
  --dash-button-background-color-active: var(--dash-danger-active);
}

a {
  text-decoration: inherit; /* no underline */
}

:host([disabled]) {
  .button {
    cursor: initial;
    color: var(--dash-button-text-color-disabled);
    filter: brightness(0.9);
  }
}

:host(:not([disabled])) {
  .button {
    &:hover {
      background-color: var(--dash-button-background-color-hover);
    }

    &:focus-visible {
      @extend .focus-outline;
    }

    &:active {
      background-color: var(--dash-button-background-color-active);
    }
  }
}

:host([scale='s']) {
  .button {
    height: var(--dash-spacing-6);
    --dash-button-padding: var(--dash-spacing-half) var(--dash-spacing-1-half);
    font-size: var(--dash-font-size-1);
  }

  dash-icon {
    --dash-icon-size: 14px;
    margin-inline-end: var(--dash-spacing-1);
  }
}

:host([scale='l']) {
  .button {
    height: var(--dash-spacing-12);
    --dash-button-padding: var(--dash-spacing-2) var(--dash-spacing-4);
    font-size: var(--dash-font-size-4);
  }

  dash-icon {
    --dash-icon-size: 18px;
    margin-inline-end: var(--dash-spacing-3);
  }
}

:host([appearance='outline']) {
  .button {
    border: 1px solid var(--dash-border-1);
  }
}

:host([appearance='solid']) {
  --dash-button-text-color: var(--dash-text-color-1-dark);
  --dash-button-text-color-disabled: var(--dash-text-color-2-dark);
  --dash-button-background-color: var(--dash-brand);
  --dash-button-background-color-hover: var(--dash-brand-hover);
  --dash-button-background-color-active: var(--dash-brand-active);
}

.button {
  box-sizing: border-box;
  background-color: var(--dash-button-background-color);
  padding: var(--dash-button-padding);
  height: var(--dash-spacing-8);
  width: 100%;
  border-radius: var(--dash-border-radius);
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex: none;
  color: var(--dash-button-text-color);
  text-align: left;
  overflow: hidden;
  transition: background-color var(--dash-transition-time-fast) ease-out;
}

dash-icon {
  --dash-icon-size: 16px;
  margin-inline-end: var(--dash-spacing-2);
  align-self: center;
}

